hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_bad_dict.php.exp
ERROR: File "lambda_called_on_bad_dict.php", line 3, characters 19-19:
Invalid index type for this dict (Typing[4449])
  File "lambda_called_on_bad_dict.php", line 4, characters 6-27:
  This is a string
  File "lambda_called_on_bad_dict.php", line 3, characters 19-19:
  It is incompatible with an int
