hphp/hack/test/typecheck/constraint_array_index/after/lambda_called_on_bad_dict.php
<?hh
function f(): void {
  $f = ($v ==> $v[0]);
  $f(dict["oiia oiia" => 0]);
}
